build/log/idf_py_stdout_output_8488
Command: ninja all
[1/149] Linking C static library esp-idf\esp_pm\libesp_pm.a
[2/149] Linking C static library esp-idf\esp_driver_gpio\libesp_driver_gpio.a
[3/149] Building C object esp-idf/Servo/CMakeFiles/__idf_Servo.dir/Servo.c.obj
FAILED: esp-idf/Servo/CMakeFiles/__idf_Servo.dir/Servo.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Dell/Documents/ESPIDF/Manage_Drugs/build/config -IC:/Users/Dell/Documents/ESPIDF/Manage_Drugs/Servo/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/config/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/include/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/dma/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/ldo/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/debug_probe/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/power_supply/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_hw_support/port/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/heap/tlsf -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/soc/esp32c3/register -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32c3/include/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_rom/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/include/riscv -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include/arch -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/lwip/port/esp32xx/include/sys -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_gpio/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_spi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_ana_cmpr/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_i2s/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_sdspi/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_sdio/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_dac/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_rmt/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_tsens/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_sdm/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_i2c/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_uart/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/vfs/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_ledc/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_parlio/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.5.1/components/esp_driver_twai/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Dell/Documents/ESPIDF/Manage_Drugs=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/Servo/CMakeFiles/__idf_Servo.dir/Servo.c.obj -MF esp-idf\Servo\CMakeFiles\__idf_Servo.dir\Servo.c.obj.d -o esp-idf/Servo/CMakeFiles/__idf_Servo.dir/Servo.c.obj -c C:/Users/Dell/Documents/ESPIDF/Manage_Drugs/Servo/Servo.c
C:/Users/Dell/Documents/ESPIDF/Manage_Drugs/Servo/Servo.c: In function 'Servo_SetAngle':
C:/Users/Dell/Documents/ESPIDF/Manage_Drugs/Servo/Servo.c:53:19: error: 'LEDC_HIGH_SPEED_MODE' undeclared (first use in this function); did you mean 'LEDC_LOW_SPEED_MODE'?
   53 |     ledc_set_duty(LEDC_HIGH_SPEED_MODE, servo->channel, duty);
      |                   ^~~~~~~~~~~~~~~~~~~~
      |                   LEDC_LOW_SPEED_MODE
C:/Users/Dell/Documents/ESPIDF/Manage_Drugs/Servo/Servo.c:53:19: note: each undeclared identifier is reported only once for each function it appears in
[4/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_lit.c.obj
[5/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_file.c.obj
[6/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_dstr.c.obj
[7/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_rem.c.obj
[8/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_end.c.obj
[9/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_hashtable.c.obj
[10/149] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_compat.c.obj
[11/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_int.c.obj
[12/149] Linking C static library esp-idf\riscv\libriscv.a
[13/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_str.c.obj
[14/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_utils.c.obj
[15/149] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_runner.c.obj
[16/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/argtable3.c.obj
[17/149] Building C object esp-idf/console/CMakeFiles/__idf_console.dir/argtable3/arg_rex.c.obj
[18/149] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity_utils_freertos.c.obj
[19/149] Building C object esp-idf/unity/CMakeFiles/__idf_unity.dir/unity/src/unity.c.obj
[20/149] Building C object esp-idf/protobuf-c/CMakeFiles/__idf_protobuf-c.dir/protobuf-c/protobuf-c/protobuf-c.c.obj
ninja: build stopped: subcommand failed.
